--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img class="header__logo" src='img/logo.svg'>
+    <img class="header__logo" src="img/logo.svg">
     <div class="header__controls">
       <a href="#contacts">Контакты</a>
       <button>Заказать</button>
@@ -22,7 +22,64 @@
     <div class="about__images">
       <img class="about__sun-image" src="img/sun.png">
       <img class="about__image" src="img/solar-panel.png">
-    </div>
-  </section>
-</body>
+      </div>
+    </section>
+      <section class="form">
+        <div class="form__container">
+          <h1>Оставьте свои контакты</h1>
+          <p>Поможем подобрать модель. <br>Выбрать удобный вариант доставки и установки. <br>Гарантия возврата денег.</p>
+            <form>
+            <div class="form__group">
+              <label for="name">Ваше имя</label>
+              <input type="text" placeholder="Введите имя" id="name">
+              </div>
+              <div class="form__group">
+              <label for="email">Электронный адрес</label>
+              <input type="text" placeholder="***@yandex.ru" id="email">
+              </div>
+              <div class="form__group">
+                <label for="phone">Номер телефона</label>
+                <input type="text" placeholder="7 (999) 999-99-99" id="phone">
+              </div>
+              <div class="form__group">
+              <label for="name">Примерный бюджет</label>
+              <select id="budget">
+                <option value="10-30">10 000₽ – 30 000₽</option>
+                <option value="30-60">30 000₽ – 60 000₽</option>
+                <option value="60-100">60 000₽ – 100 000₽</option>
+                <option value="100+">100 000₽</option>
+              </select>
+              </div>
+              <button class="form__submit" type="submit">Отправить заявку</button>
+            </form> 
+        </div>
+      </section> 
+      <footer>
+        <div class="footer_container">
+          <div class="footer_group">
+            <h3>Позвонить нам:</h3>
+            <div class="footer_links">
+              <a href="tel:74959999999">+7 (495) 999-99-99</a>
+            </div>
+          </div>
+          <div class="footer_group">
+            <h3>Решения для дома</h3>
+            <div class="footer_links">
+              <a href="#">Солнечные панели GreenRobotic</a> 
+              <a href="#">Системы солнечных панелей GreenStation</a>
+            </div>
+          </div>
+          <div class="footer_group">
+            <h3>Компания</h3>
+            <div class="footer_links">
+              <a href="#">Контакты</a>
+              <a href="#">Вакансии</a>
+              <a href="#">Сми</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer_copyright">GreenCorp © 2021
+        </div>
+      </footer>
+    </body>
 </html>
