--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
     </header>
       <section class="about">
+        <canvas class="orb-canvas" id="orb-canvas"></canvas>
         <div class="about__info animate__animated animate__fadeInLeft">
           <h1>Солнечные панели GreenRobotic</h1>
           <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -29,48 +30,64 @@
       <section class="features" id="features">
         <div class="cards">
           <div class="card">
-            <div class="card__logo" style="color:#ffb406">
-              <i class="fa-solid fa-solar-panel"></i>
+            <div class="card__logo yellow">
+              <i class="fas fa-solar-panel"></i>
             </div>
             <h3>Уменьшите счета за электричество</h3>
-            <p>Используйте чистую солнечную энергию для питания своего дома: уменьшите зависимость от электросети и счета за электричество.</p>
+            <p>
+                Используйте чистую солнечную энергию для питания своего дома: уменьшите зависимость от электросети и счета за электричество.
+            </p>
           </div>
           <div class="card">
-            <div class="card__logo" style="color:#ad1714">24/7</div>
-            <h3> Мониторинг электроэнергии</h3>
-            <p >Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения.</p>
-          </div>
-          <div class="card">
-            <div class="card__logo" style="color: #22a030">
-            <i class="fa-solid fa-chart-line"></i>
+            <div class="card__logo red">
+                24/7
             </div>
-            <h3> Максимальная эффективность</h3>
-            <p>Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со сложными углами.</p>
+            <h3>Мониторинг электроэнергии</h3>
+            <p>
+                Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения.
+            </p>
+          </div>
+          <div class="card">
+            <div class="card__logo green">
+              <i class="fas fa-chart-line"></i>
+            </div>
+            <h3>Максимальная эффективность</h3>
+            <p>
+                Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со сложными углами.
+            </p>
           </div>
         </div>
         <div class="features__border"></div>
         <div class="features__feedback">
           <div class="features__feedback-left">
-            <h2>Нам доверяет<br>5000+ счастливых клиентов.</h2>
-            <p> Мы помогли тысячам людей перейти на зеленую энергию.<br>После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании.</p>
+            <h2>
+               Нам доверяет
+              <br>
+               5000+ счастливых клиентов
+            </h2>
+            <p>
+               Мы помогли тысячам людей перейти на зеленую энергию.
+              <br>
+               После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании
+            </p>
           </div>
           <div class="features__feedback-right">
-            <div class="features__box">
-              <div class="features__savings-box">
-                <h3>30 млн ₽</h3>
-                <p>Помогаем экономить нашим клиентам ежемесячно.</p>
-              </div>
-              <div class="features__rate-box">
-                <h3> 4.7</h3>
-                <div class="features__stars">
-                  <p class="stars" style="color: #ff7039"><i class="fa-sharp fa-solid fa-star"></i></p>
-                  <p class="stars" style="color: #ff7039"><i class="fa-sharp fa-solid fa-star"></i></p>
-                  <p class="stars" style="color: #ff7039"><i class="fa-sharp fa-solid fa-star"></i></p>
-                  <p class="stars" style="color: #ff7039"><i class="fa-sharp fa-solid fa-star"></i></p>
-                  <p class="stars" style="color: #ff7039"><i class="fa-sharp fa-solid fa-star"></i></p>
-                </div>
-                <p>Средняя оценка наших клиентов</p>
-              </div>
+            <div class="features__box features__savings-box">
+              <h3>30 млн ₽</h3>
+              <p>Помогаем экономить нашим клиентам ежемесячно</p>
+            </div>
+            <div class="features__box features__rate-box">
+              <h3>4.7</h3>
+              <p class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </p>
+              <p>
+                Средняя оценка наших клиентов
+              </p>
             </div>
           </div>
         </div>
@@ -78,14 +95,16 @@
       <section class="promo">
         <div class="promo__image"></div>
         <div class="promo__right">
-          <div class="panel">
-            <h2>Зарядите свой дом.</h2>
-            <ul>
-            <li >Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна.</li><br>
-            <li >Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и накопления энергии.</li>
-            </ul>
-            <div class="button">
-              <button>Заказать<i class="fa-solid fa-chevron-right"></i></button>
+          <div class="promo__text">
+            <h2>Зарядите свой дом</h2>
+            <p>
+                Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна.
+            </p>
+            <p>
+                Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и накопления энергии.
+            </p>
+            <div class="promo__button-wrap">
+              <button type="button">Заказать <i class="fas fa-chevron-right"></i></button>
             </div>
           </div>
         </div>
@@ -147,5 +166,6 @@
         <div class="footer_copyright">GreenCorp © 2021</div>
       </footer>
       <script src="fa/css/all.min.css"></script>
+      <script src="js/canvas.js"></script>
   </body>
 </html>
